cmake_minimum_required(VERSION 3.30)
project(Taller2Corte)

set(CMAKE_CXX_STANDARD 20)

add_executable(Taller2Corte main.cpp
        1.cpp
        2.cpp
        3.cpp
        4.cpp
        5.cpp
        6.cpp
        8.cpp
        7.cpp
        9.cpp
        10.cpp
        11.cpp
        12.cpp
        13.cpp
        14.cpp
        15.cpp
        17.cpp)
